src/objects/QualityAssuranceAudit__c.object
<CustomObject>
    <description>Custom object used to perform quality assurance audits for individual employees or teams.</description>
    <fields>
        <fullName>AuditURL__c</fullName>
        <description>Displays the URL link to the audit record - for use in email templates and reports.</description>
        <formula>HYPERLINK( &quot;https://srm.my.salesforce.com/&quot; + Id , &quot;https://srm.my.salesforce.com/&quot; + Id )</formula>
        <label>Audit URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BestPracticeError__c</fullName>
        <description>Picklist field that allows the user to select the type of best practice error found, if any, during the audit process.</description>
        <inlineHelpText>Select the most appropriate option if any best practice error(s) were found.</inlineHelpText>
        <label>Best Practice Error</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unprofessional Communication to Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unprofessional Communication to Other Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Comments or Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Communication to Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Communication to Other Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeded Service Level Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Typo/Misspelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect information on evaluation form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Met where it should be listed as Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failing to fill out a part of the evaluation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field that allows the user to select the case the audit is referencing.</description>
        <inlineHelpText>Select the lookup icon, find the case you are auditing, and link the case to this audit record.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Quality Assurance Audits</relationshipLabel>
        <relationshipName>Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CauseOfError__c</fullName>
        <description>Multiselect picklist that allows the user to identify the cause(s) of error relating to the audit.</description>
        <inlineHelpText>Select the most appropriate option for why you believe the error(s) took place.</inlineHelpText>
        <label>Cause of Error</label>
        <picklist>
            <picklistValues>
                <fullName>Employee Mistake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Misunderstanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscommunication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Clarity in Policy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CorrectiveAction__c</fullName>
        <description>Open text field that allows the user to enter in any corrective actions that need to take place on a student process, transfer evaluation, or case that was audited.</description>
        <inlineHelpText>Please describe any corrective actions that need to take place on the student process, transfer evaluation, or case based on your audit results.</inlineHelpText>
        <label>Corrective Action</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExplanationofAudit__c</fullName>
        <description>Open text field that allows an auditor to explain what they found during the audit.</description>
        <inlineHelpText>Enter in an explanation of what you found during the audit. Describe the error(s) found and any positive areas you would like to highlight.</inlineHelpText>
        <label>Explanation of Audit</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FollowUpDate__c</fullName>
        <description>Date field that allows the user to select a date in which to follow-up to ensure any corrective action has taken place.</description>
        <inlineHelpText>Select a date that will remind you to follow-up on any corrective action that was necessary.</inlineHelpText>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FollowUpNeeded__c</fullName>
        <label>Follow Up Needed</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FollowUpNotes__c</fullName>
        <description>Select a date that will remind you to follow-up on any corrective action that was necessary.</description>
        <inlineHelpText>Enter in any notes to remind you how / why to follow up with the audit.</inlineHelpText>
        <label>Follow Up Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HighStakeError__c</fullName>
        <description>Picklist field that allows the user to select the type of high stake error found, if any, during the audit process.</description>
        <inlineHelpText>Select the most appropriate option if any high stake error(s) were found.</inlineHelpText>
        <label>High Stake Error</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SWATEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOAPCOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misapplied Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper Counsel to Mentor/Other Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper Counsel to Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper Counsel to Non-University Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Approval Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Clearance Received (Bursar/FA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Banner Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unofficial Documentation Used w/out Proper Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Documentation Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Grade Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Crosswalk Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EV Letter Sent Before Course/Term Enrollment was Established</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Information Included in Letter to Student or Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FERPA Violation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diploma Printing Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diploma Mailing Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inappropriate Readmission Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect LDA Used for Withdrawal Processing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QualityAssurance__c</fullName>
        <description>Master detail relationship field that allows users to link the quality assurance individual audit to the over all monthly employee audit.</description>
        <inlineHelpText>Select the lookup icon, find the Quality Assurance record you are working on, and link it to this audit record.</inlineHelpText>
        <label>Quality Assurance</label>
        <referenceTo>QualityAssurance__c</referenceTo>
        <relationshipLabel>Quality Assurance Audits</relationshipLabel>
        <relationshipName>Errors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SRMError__c</fullName>
        <description>Picklist field that allows the user to select the type of SRM error found, if any, during the audit process.</description>
        <inlineHelpText>Select the most appropriate option if any SRM error(s) were found.</inlineHelpText>
        <label>SRM Error</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Properties and/or Categorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Properties and/or Categorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact was Set Incorrectly or Not At All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect &quot;From&quot; Email Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudentProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field that allows the user to select the Student Process the audit is referencing.</description>
        <inlineHelpText>Select the lookup icon, find the student process you are auditing, and link it to this audit record.</inlineHelpText>
        <label>Student Process</label>
        <referenceTo>StudentProcess__c</referenceTo>
        <relationshipLabel>Quality Assurance Audits</relationshipLabel>
        <relationshipName>Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Open text field that allows the user to enter in a subject or description of the quality assurance audit.</description>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemError__c</fullName>
        <description>Picklist field that allows the user to select the type of system error found, if any, during the audit process.</description>
        <inlineHelpText>Select the most appropriate option if any system error(s) were found.</inlineHelpText>
        <label>System Error</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SWATEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOAPCOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accreditation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student ID#/Institution Name/Degree Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informatica</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrainingIssue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field that indicates there may be a training issue. Used in workflow that notifies the training coordinator/manager to take action.</description>
        <inlineHelpText>Check this box if you believe there is a training issue. By checking this box, the training coordinator will be notified to take action.</inlineHelpText>
        <label>Training Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransferEvaluation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field that allows the user to select the Transfer Evaluation the audit is referencing.</description>
        <inlineHelpText>Select the lookup icon, find the transfer evaluation you are auditing, and link it to this audit record.</inlineHelpText>
        <label>Transfer Evaluation</label>
        <referenceTo>TransferEvaluation__c</referenceTo>
        <relationshipLabel>Quality Assurance Audits</relationshipLabel>
        <relationshipName>Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TurnAroundTime__c</fullName>
        <description>Number field that allows the user to enter in the number of business days the process or case took.</description>
        <inlineHelpText>Enter in business days how long the evaluation, process, or case took to complete.</inlineHelpText>
        <label>Turn Around Time</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TypeOfError__c</fullName>
        <label>Type of Error</label>
        <picklist>
            <picklistValues>
                <fullName>High Stake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Quality Assurance Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>QualityAssurance__c</columns>
        <columns>HighStakeError__c</columns>
        <columns>BestPracticeError__c</columns>
        <columns>SRMError__c</columns>
        <columns>SystemError__c</columns>
        <columns>ExplanationofAudit__c</columns>
        <columns>TrainingIssue__c</columns>
        <columns>Case__c</columns>
        <columns>StudentProcess__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <roleAndSubordinatesInternal>AssistantRegistrar</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CompletedAuditsByDate</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>HighStakeError__c</columns>
        <columns>BestPracticeError__c</columns>
        <columns>SRMError__c</columns>
        <columns>SystemError__c</columns>
        <columns>TurnAroundTime__c</columns>
        <columns>ExplanationofAudit__c</columns>
        <columns>TrainingIssue__c</columns>
        <columns>Case__c</columns>
        <columns>StudentProcess__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>FollowUpDate__c</columns>
        <columns>FollowUpNeeded__c</columns>
        <columns>FollowUpNotes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:5</value>
        </filters>
        <label>Completed Audits by Date</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>AssistantRegistrar</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FollowUpNeeded</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>FollowUpDate__c</columns>
        <columns>FollowUpNeeded__c</columns>
        <columns>FollowUpNotes__c</columns>
        <columns>ExplanationofAudit__c</columns>
        <columns>HighStakeError__c</columns>
        <columns>BestPracticeError__c</columns>
        <columns>SRMError__c</columns>
        <columns>SystemError__c</columns>
        <columns>QualityAssurance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FollowUpNeeded__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Follow Up Needed</label>
        <sharedTo>
            <roleAndSubordinatesInternal>AssistantRegistrar</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysAudits</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>HighStakeError__c</columns>
        <columns>BestPracticeError__c</columns>
        <columns>SRMError__c</columns>
        <columns>SystemError__c</columns>
        <columns>TurnAroundTime__c</columns>
        <columns>ExplanationofAudit__c</columns>
        <columns>TrainingIssue__c</columns>
        <columns>Case__c</columns>
        <columns>StudentProcess__c</columns>
        <columns>TransferEvaluation__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Audits</label>
        <sharedTo>
            <roleAndSubordinatesInternal>AssistantRegistrar</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>QAA-{000000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Assurance Audits</pluralLabel>
    <recordTypes>
        <fullName>StudentRecords</fullName>
        <active>true</active>
        <description>Record type used to perform an audit for a Student Records process or case.</description>
        <label>Student Records</label>
    </recordTypes>
    <recordTypes>
        <fullName>TranscriptEvaluation</fullName>
        <active>true</active>
        <description>Record type used to perform an audit for a Transcript Evaluation process or case.</description>
        <label>Transcript Evaluation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>